@@ -7,6 +7,8 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 /**
+ * -Xms64m -Xmx64m -Xmn32m -XX:+PrintGCDetails -XX:+UseG1GC
+ *
  * @author ZhangShaowei on 2019/2/25 9:40
  **/
 @SpringBootApplication
@@ -21,12 +23,10 @@ public class TestJvmController {
     @SneakyThrows
     @GetMapping("test")
     public Object test() {
-        for (int i = 0; i < 1000; i++) {
-            byte[] data1 = new byte[1 * 1024 * 1024];
-
-            Thread.sleep(100L);
+        for (int i = 0; i < 1000000; i++) {
+            byte[] data = new byte[1024];
+            Thread.sleep(1L);
         }
-
         return "success";
     }
 
